Fix user avatar, name alignment
Misaligned in Edge, IE11, Firefox

--- a/src/components/user/_style.scss
+++ b/src/components/user/_style.scss
@@ -1,6 +1,6 @@
 .user {
 	line-height: 30px;
-	vertical-align: top;
+	display: flex;
 }
 
 .user__avatar-image {
